# telebot_cloudrun_template

./: Dockerfile  Makefile  README.md  pyproject.toml  run.dev.sh
telebot_template/: bot.py  main.py
