[tool.poetry]
name = "telebot-template"
version = "0.1.0"
description = ""
authors = ["Adem Frenk <adem.frenk@gmail.com>"]
readme = "README.md"
packages = [{include = "telebot_template"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.1"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
